--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,13 +53,12 @@ body {
 }
 
 .search-button {
-  width: 6%;
+  width: 5.5vh;
   height: 40px;
   border-radius: 25px;
   margin-top: 100px;
-  margin: 0 auto;
-  display: flex;
   margin-block-start: 1%;
+  display: flex;
 }
 
 .search-button:hover {
@@ -94,6 +93,6 @@ body {
 }
 
 input {
-  text-align: center;
-  font: Audiowide;
+  text-align: center;margin: auto;
+  font-family: Audiowide;
 }
