style about me page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -95,3 +95,17 @@ input {
   text-align: center;margin: auto;
   font-family: Audiowide;
 }
+
+.about-me-title {
+  max-width: 50%;
+  color: black;
+  font-size: 40px;
+  margin-top: 5vh;
+}
+
+.about-me {
+  max-width: 50%;
+  color: black;
+  font-size: 15px;
+  margin-top: 5vh;
+}
