--- a/client/src/index.css
+++ b/client/src/index.css
@@ -73,7 +73,7 @@ body {
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 2.5rem;
@@ -134,4 +134,18 @@ input {
   margin: 0 auto;
   display: flex;
   margin-top: 1vh;
+}
+
+.result-title-text {
+  text-align: center;
+  color: black;
+  font-size: 35px;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+}
+
+.streaming-results {
+  display: inline-block;
+  margin-left: 5px;
+  justify-content: center;
 }
