--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@ body {
   font-family: Audiowide, Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("./images/finalProjectBackground.jpg");
+  /* background-image: url("./images/finalProjectBackground.jpg"); */
   background-size: cover;
   height: 100%;
   background-repeat: no-repeat;
